--- a/src/NYTimesColumnChart.mxml
+++ b/src/NYTimesColumnChart.mxml
@@ -16,20 +16,8 @@
       [Bindable]
       public var yTopSeries:String;
 
-      [Bindable]
-      public var title:String;
-
     ]]>
   </mx:Script>
-
-  <mx:Style>
-    .title {
-      fontSize: 16;
-      font-weight: bold;
-      font-family: ArialEmbedded;
-      color: #333333;
-     }
-  </mx:Style>
 
   <mx:CategoryAxis id="xAxis" dataProvider="{chartData}" categoryField="{xField}"/>
   <mx:LinearAxis id="yAxis"/>
@@ -37,7 +25,7 @@
   <mx:SolidColor id="bottomSeries" color="#aaaaaa" alpha="0.8"/>
   <mx:SolidColor id="topSeries" color="#333333" alpha="0.8"/>
 
-  <mx:CartesianChart dataProvider="{chartData}" showDataTips="true" width="100%" height="100%" top="0">
+  <mx:CartesianChart dataProvider="{chartData}" showDataTips="true" width="100%" height="100%">
     <mx:seriesFilters>
         <mx:Array/>
     </mx:seriesFilters>
