--- a/src/StackedCharts.mxml
+++ b/src/StackedCharts.mxml
@@ -6,9 +6,14 @@
     width="100%"
     height="100%"
     creationComplete="init()"
+    backgroundColor="#ffffff"
+    backgroundAlpha="1.0"
     >
-<mx:Script>
-  <![CDATA[
+
+    <mx:Style source="./style.css"/>
+
+    <mx:Script>
+    <![CDATA[
         import mx.collections.ArrayCollection;
         import mx.rpc.events.ResultEvent;
 
@@ -21,7 +26,6 @@
                 ExternalInterface.addCallback('setYField2', setYField2);
                 ExternalInterface.call("stackedChartIsReady");
             }
-            setChartType('line');
         }
 
 
@@ -37,8 +41,8 @@
             yField2 = s;
         }
 
-        public function setChartData(arr:Array):void {
-            chartData = new ArrayCollection(arr);
+        public function setChartData(arr:Object):void {
+            chartData = new ArrayCollection(arr as Array);
         }
 
         public function setChartType(s:String):void {
@@ -55,13 +59,7 @@
         }
 
         [Bindable]
-        public var chartData:ArrayCollection = new ArrayCollection([
-                                                              {x:"Jan", cost:100, profit:20},
-                                                              {x:"Feb", cost:120, profit:130},
-                                                              {x:"March", cost:80, profit:70},
-                                                              {x:"April", cost:10, profit:5},
-                                                              {x:"May", cost:90, profit:70},
-                                                              {x:"June", cost:50, profit:80}]);
+        public var chartData:ArrayCollection = new ArrayCollection([]);
 
         [Bindable]
         public var xField:String = 'x';
@@ -72,11 +70,8 @@
         [Bindable]
         public var yField2:String = 'profit';
 
-
-
-  ]]>
-</mx:Script>
-
+      ]]>
+    </mx:Script>
 
 <mx:ViewStack id="myStack" width="100%" height="100%">
    <local:NYTimesColumnChart
